@startuml

class Entity{
    - double[] polygonCordinates
    - double x
    - double y
    - double rotation
}

class Player{}
Class Enemy{}
class bullet{}
class Asteroid{}


interface IGamePluginService{
    void start(GameData gameData, World world)
    void stop(GameData gameData, World world)
}

class Collision{
    + void process(GameData gameData, World world)
    + boolean Collision(Entity entity1, Entity entity2)
}

interface IPostEntityProcessingService{
    void process(GameData gameData, World world)
}

interface IEntityProsessingService{
    void process(GameData gameData, World world)
}

Enemy -down-|> Entity
Player -down-|> Entity
bullet -down-|> Entity
Asteroid -down-|> Entity

Enemy -up-|> IEntityProsessingService
Player -up-|> IEntityProsessingService
bullet -up-|> IEntityProsessingService
Asteroid -up-|> IEntityProsessingService

Enemy -up-|> IGamePluginService
Player -up-|> IGamePluginService
bullet -up-|> IGamePluginService
Asteroid -up-|> IGamePluginService





@enduml